--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,10 @@ html {
   scroll-behavior: smooth;
 }
 
+Label {
+  margin-bottom: 4px;
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
